# HomeServ

./: .gitignore  CMakeLists.txt  README.md
homeserv_main/: CMakeLists.txt  main.cpp
src/: Light.cpp  Light.h  ServerApp.cpp  ServerApp.h  main.cpp
tests/: CMakeLists.txt  ServerAppTests.cpp
